@@ -1,9 +1,16 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.556 2006/01/01 03:46:04 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.557 2006/01/02 18:23:34 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
+
+  2 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIPortage.py:
+  get_deps() calls 'emerge -p' and then removed packages that aren't in vdb
+  added emerge()
+  src/GLIArchitectureTemplate.py:
+  install_packages() now calls emerge() in GLIPortage
 
   31 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIArchitectureTemplate.py:
